finished electoral list module

--- a/views/admin/electoral-list.ejs
+++ b/views/admin/electoral-list.ejs
@@ -33,6 +33,59 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
+
+
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModal" aria-hidden="true" >
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header" align="center" style="background-color: cornflowerblue">
+              <h2 class="modal-title"> EDITAR LISTA ELECTORAL </h2>
+          </div>
+
+          <div class="modal-body">
+              <div class="row">
+                  <form method="post" action="/admin/electoral-list-update">
+                      <input type='hidden' id='id_electoral_list' name="id" >
+                      <div class="col-sm-12">
+                          <div class="form-group row">
+                              <label class="col-md-3" style="font-size: 20px;">Tipo de Eleccion:</label>
+                              <div class="col-md-9 pull-left">
+                                  <input type="text" id="edit_type_process" name="type_process" class="input-lg form-control" required>
+                                  <!--select type="text" class="input-lg form-control" id="edit_type_process" name="type_process" required></select-->
+                              </div>
+                          </div>
+
+                          <div class="form-group row">
+                            <label class="col-md-3" style="font-size: 20px;">Facultad:</label>
+                            <div class="col-md-9 pull-left">
+                                <!--input type="text" id="edit_name" name="name" class="input-lg form-control"-->
+                                <select type="text" class="input-lg form-control" id="edit_faculty" name="faculty" required></select>
+                            </div>
+                        </div>
+
+
+                          <div class="form-group row">
+                            <label class="col-md-3" style="font-size: 20px;">Nombre:</label>
+                            <div class="col-md-9 pull-left">
+                                <input type="text" id="edit_name" name="name" class="input-lg form-control">
+                            </div>
+                          </div>
+
+                          
+                          <div align='center'>
+                          <button class="btn btn-lg btn-danger" data-dismiss="modal" >Cerrar</button>
+                          <input type="submit" class="btn btn-lg btn-primary" value="Actualizar">
+                          </div>                      
+                      </div>
+                  </form> 
+              </div>
+          </div>
+
+      </div>
+  </div>
+</div>
+
+
 <body class="hold-transition skin-purple sidebar-mini">
 <!-- Site wrapper -->
 
@@ -132,6 +185,7 @@
                     <th ><p align="center">Tipo de elección</p></th>
                     <th ><p align="center">Facultad</p></th>
                     <th ><p align="center">Lista Electoral</p></th>
+                    <th ><p align="center">Accion</p></th>
                   </tr>
                 </thead>
                 <tbody align="center">
@@ -161,13 +215,13 @@
   <script src="../bootstrap/js/bootstrap.min.js"></script>
   <!-- DataTable -->
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+
+  
   <!-- AdminLTE App -->
   <script src="../dist/js/app.min.js"></script>
   <!-- Color Picker -->
-  
-  <script src="../js/jscolor.js"></script>
-
-
+  <!--script src="../js/jscolor.js"></script-->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   
 
 
@@ -185,70 +239,207 @@
 
 <script>
 
-//$("button").click(function(){
-/*
- function GetIdCompany(){
-    return JSON.parse($.ajax({
-        type: "GET",
-        url: "/admin/get_info_user",
-        cache: false,
-        async: false
-    }).responseText).id_company;
- }
-*/
+
+var all_electoral_list = [];
+//var select_process;
 
 $(document).ready(function() {
-  get_processes_type();
-  get_faculties();
-  get_routes();
+
+} );
+
+
+$(document).ready(function() {
+
+
+
+
+  //get_processes_type('#process_type',-1);
+  get_processes_type('#process_type',2);
+  get_faculties('#faculty',-1);
+  get_electoral_lists();
+
+
+  check_process('#process_type');
+  
+  //check_process(select_process);
+  
+  
+
+  $('#process_type').on('change', function() {
+      check_process(this);
+  });
+
 });
 
 
-function get_processes_type(){
+function load_table(){
+
+    // Setup - add a text input to each footer cell
+    $('#tabla_route thead tr').clone(true).appendTo( '#tabla_route thead' );
+    $('#tabla_route thead tr:eq(1) th').each( function (i) {
+        var title = $(this).text();
+        if(title!="Accion" && title!="#"){
+            $(this).html( '<div align=center> <input style="color:black;text-align:center" type="text" placeholder='+title+' /> </div>' );
+    
+            $( 'input', this ).on( 'keyup change', function () {
+                if ( table.column(i).search() !== this.value ) {
+                    table
+                        .column(i)
+                        .search( this.value )
+                        .draw();
+                }
+            } );
+        }
+    } );
+ 
+    var table = $('#tabla_route').DataTable( {
+        orderCellsTop: true,
+        fixedHeader: true
+    } );
+
+}
+
+function check_process(selector){
+
+  actual_option = $(selector).find('option:selected').text();
+     if(actual_option == "CONSEJO DE FACULTAD"){
+      $('#faculty').removeAttr('disabled');
+     }else{
+      $('#faculty').attr('disabled', 'disabled');
+     }
+}
+
+
+function get_processes_type(name_select,val){
   
   $.get("/admin/process-type/all", function(processes_type, status){
-    
-    console.log(processes_type);
-    var select_process = $('#process_type');
+    var select_process = $(name_select).empty();
     processes_type.forEach(function (process_type) {
-        var option = new Option(process_type.name, process_type.id_process_type);
-        $(option).html(process_type.name);
+        var option = new Option(process_type.name, process_type.id_tipo_proceso);
+        $(option).html(process_type.nombre);
         select_process.append(option);
     });
+    if(val!=-1){
+      select_process.val(val);
+      check_process(select_process);
+    }
+    /*
+    if(val2!=-1){
+      check_process(select_process);
+    }*/
   });
 } 
 
 
-function get_faculties(){
+function get_faculties(name_select,val){
 
-  $.get("/admin/faculty/all", function(faculties, status){
-    
-    var select_faculty = $('#faculty');
-    faculties.forEach(function (faculty) {
-        var option = new Option(faculty.name, faculty.id_faculty);
-        $(option).html(faculty.name);
-        select_faculty.append(option);
-    });
+$.get("/admin/faculty/all", function(faculties, status){
+  var select_faculty = $(name_select).empty();
+  faculties.forEach(function (faculty) {
+      var option = new Option(faculty.nombre, faculty.id_facultad);
+      $(option).html(faculty.nombre);
+      select_faculty.append(option);
   });
+  if(val!=-1){
+    select_faculty.val(val);
+  }
+});
 } 
 
 
 
-function get_routes(){
+
+
+
+
+function get_electoral_lists(){
   
-  $.get("/admin/electoral-list/all", function(routes, status){
-    console.log(routes);
+  $.get("/admin/electoral-list/all", function(electoral_lists, status){
     var table = $('#tabla_route');
-    //table.find("tbody tr").remove();
     var i=1;
-    routes.forEach(function (route) {
-      table.append("<tr><td>" + i + "</td><td>" + route.process_type.name + "</td><td>"+ route.faculty.name+ "</td><td>"+ route.name +"</td></tr>");
+    var nombre_facultad = "";
+    var facultad_nombre = electoral_list.facultad;
+ 
+    electoral_lists.forEach(function (electoral_list) {
+      if(electoral_list.facultad == null){
+       nombre_facultad = "no definido"
+      }else{
+        nombre_facultad = electoral_list.facultad.nombre;
+      }
+      table.append("<tr><td>" + i + "</td><td>" + electoral_list.tipo_proceso.nombre + "</td><td>"+ nombre_facultad + "</td><td>"+ electoral_list.nombre +"</td><td>"+
+      "<button onclick=call_edit("+i+") class='btn btn-warning mr-3'><i class='fa fa-edit'></i></button>"+"<button onclick=Delete("+electoral_list.id_lista_electoral+") class='btn btn-danger'><i class='fa fa-trash-alt'></i></button>" +"</td></tr>");
       i++;
     });
-    $('#tabla_route').DataTable();
-    //alert("Data: " + data + "\nStatus: " + status);
+    all_electoral_list = electoral_lists;
+    load_table();
+    //$('#tabla_route').DataTable();
   });
 } 
+
+
+
+function call_edit(pos){
+    
+    data = all_electoral_list[pos-1];
+    $('#id_electoral_list').val(data.id_lista_electoral);
+    $('#edit_name').val(data.nombre);
+    
+    $('#edit_type_process').val(data.tipo_proceso.nombre);
+    $('#edit_type_process').attr('disabled', 'disabled');
+    //get_processes_type('#edit_type_process',data.tipo_proceso.id_tipo_proceso,-1);
+    /*
+    $('#edit_faculty').empty();
+    var option = new Option(data.tipo_proceso.nombre, data.id_tipo_proceso);
+    $(option).html(data.tipo_proceso.nombre);
+    $('#edit_type_process').append(option);
+    $('#edit_type_process').attr('disabled', 'disabled');
+    */
+
+    console.log(data);
+
+    if(data.facultad == null){
+      $('#edit_faculty').empty();
+      $('#edit_faculty').attr('disabled', 'disabled');
+    }else{
+      $('#edit_faculty').removeAttr('disabled');
+      get_faculties('#edit_faculty',data.facultad.id_facultad);
+    }
+    
+    $('#editModal').modal('show');
+    
+}
+
+function Delete(id){
+  Swal.fire({
+        title: 'Usted esta a punto de eliminar el voto con id '+id,
+        text: "¡Usted no podra revertir esto!",
+        icon: 'warning',
+        showCancelButton: true,
+        reverseButtons: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'SI, CONFIRMAR'
+      }).then((result) => {
+        if (result.value) {              
+          var rpta = $.ajax({
+              type: "POST",
+              dataType: "json",
+              url: "/admin/electoral-list-delete",
+              data: {id: id},
+              cache: false,
+              async: false
+          }).responseText;
+          if(rpta="ok"){
+            location.reload();
+          }
+          else{
+            alert(rpta);
+          }
+        }
+      });
+}
+
+
 
 function validateForm(){
   return true;
