--- a/views/vote-confirm.ejs
+++ b/views/vote-confirm.ejs
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evote</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="librerias/scss/estilos2.css">
+    <link rel="stylesheet" href="librerias/scss/estilos.css">
     <script src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 </head>
 <body>
+
+
     <header>
         <div class="cabecera">
             <a href="/">
@@ -25,13 +27,26 @@
         <!-- inicio formulario busqueda -->
         <div class="container">
 
+
             <!--div class="formulario"-->
-            <form class="formulario" method="post" action="/vote" onsubmit="return validateForm()">
+            <form class="formulario" method="post" action="/confirm-vote" onsubmit="return validateForm()">
+        
+    
+
                 <fieldset>
                     <legend>Emisión de Votación</legend>
                     <h1>ASAMBLEA UNIVERSITARIA</h1>
                     <H3>FACULTAD DE PRODUCCION Y SERVICIOS</H3>
-                    <div class="marcacion-voto" id="lista_asamblea"></div>
+                    <div class="marcacion-voto" id="lista_asamblea"> 
+                        <% var status; %>
+                        <%if(status == "ok"){%>
+                            <input type="hidden" name="id_lista_asamblea" value='<%= lista_asamblea.id_lista_electoral %>' />
+                            <input type="text" name="lista_asamblea" value='<%= lista_asamblea.nombre %>' disabled />
+                        <%}%>
+                        
+                        
+
+                    </div>
 
                 </fieldset>
 
@@ -39,11 +54,23 @@
                     <legend>Emisión de Votación</legend>
                     <h1>CONSEJO DE FACULTAD</h1>
                     <H3>FACULTAD DE PRODUCCION Y SERVICIOS</H3>
-                    <div class="marcacion-voto" id="lista_consejo"> </div>
+                    <div class="marcacion-voto" id="lista_consejo"> 
+                        <% var status; %>
+                        <%if(status == "ok"){%>
+                            <input type="hidden" name="id_lista_consejo" value='<%= lista_consejo.id_lista_electoral %>'  />
+                            <input type="text" name="lista_consejo" value='<%= lista_consejo.nombre %>' disabled />
+                        <%}%>
+                    </div>
 
                 </fieldset>
-
-                <button class="boton-accion" type="submit" >SIGUIENTE</button>
+                    <div align="center">
+                        
+                        <a href='#' onclick='location.reload(true); return false;'>
+                            <button class="boton-accion2" style="background: #c22014;" >CAMBIAR VOTO</button>
+                        </a>
+                        
+                        <button type="submit" class="boton-accion2" style="background: rgb(13, 129, 17);" >VOTAR</button>
+                    </div>    
             </form>
 
         </div>
@@ -53,41 +80,24 @@
 
 <script>
 
-    $(document).ready(function() {
-        init_list('lista_asamblea',1,null);
-        init_list('lista_consejo',2,1);
-    });
-
-    function init_list(id_list,id_tipo_proceso,id_facultad){
-        var mylist = $('#'+id_list);
-
-        var data = JSON.parse($.ajax({
-              type: "POST",
-              dataType: "json",
-              url: "/get-electoral-list",
-              data: {id_tipo_proceso: id_tipo_proceso,id_facultad:id_facultad},
-              cache: false,
-              async: false
-        }).responseText);
-        
-        data.forEach(function (list) {
-            var opt = 
-            "<input type='radio' value="+list.id_lista_electoral +" name='"+id_list+"' id='"+id_list+"-"+list.nombre+"'>"+
-            "<label for='"+id_list+"-"+list.nombre+"'>"+list.nombre+ "</label>";
-
-            mylist.append(opt);
-        });
-
-        var opt = 
-            "<input type='radio' value="+-1+" name='"+id_list+"' id='"+id_list+"-nulo'>"+
-            "<label for='"+id_list+"-nulo'>"+"VOTO NULO"+ "</label>";
-            mylist.append(opt);
-
+    function enviar(){
+        //console.log("VAL CONSEJO: ",$('#lista_consejo').val());
+        //console.log($('input[name="lista_consejo"]:checked').val());
+        //$('input[name="name_of_your_radiobutton"]:checked').val()
     }
 
+    $(document).ready(function() {
+        //alert("hello");
+        //init_list('lista_asamblea',1,null);
+        //init_list('lista_consejo',2,1);
+    });
 
     function validateForm(){  
       //console.log("validating form");
+      
+      return true;
+
+      /*
       var asam_vote = $('input[name="lista_asamblea"]:checked').val();
       var consejo_vote = $('input[name="lista_consejo"]:checked').val();
 
@@ -107,7 +117,7 @@
          
 
         return false;
-      }
+      }*/
       
     }
 
