--- a/public/librerias/scss/estilos.css
+++ b/public/librerias/scss/estilos.css
@@ -155,6 +155,19 @@ table {
   cursor: pointer;
 }
 
+.cerrar_sesion {
+  font: "Roboto", Arial, Helvetica, sans-serif;
+  font-size: 14px;
+  border: none;
+  width: 20%;
+  border-radius: 5px;
+  padding: 12px 0;
+  margin: 4px 0;
+  color: #fff;
+  cursor: pointer;
+}
+
+
 .formulario .boton-cancelar {
   font: "Roboto", Arial, Helvetica, sans-serif;
   font-size: 14px;
