--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,14 +24,18 @@
         <div class="vertical-center">
         <form class="formulario" method="post" action="/login" onsubmit="return validateForm()">
             <fieldset>
-                <legend>Identificación de Elector v2 </legend>
-                <label for="codigo">Usuario</label>
+                <legend>Identificación del Elector</legend>
+                <!--label for="codigo">Usuario</label>
                 <input id="codigo" name="usuario" type="text" placeholder="Ingrese su usuario" required autofocus>
                 <label for="documento">Contraseña</label>
-                <input id="documento" name="documento" type="password" placeholder="Ingrese su Contraseña" required>
+                <input id="documento" name="documento" type="password" placeholder="Ingrese su Contraseña" required-->
+                <div align="center">
+                    <a href="/auth/google"><img src="images/login_unsa.png"  class="img-fluid"/></a>
+                </div>	
             </fieldset>
-            <button class="boton-accion" >Ingresar</button>
-	    <a href="/auth/google"><img src="images/login_unsa.png"  class="img-fluid"/></a>	
+            <!--button class="boton-accion" >Ingresar</button-->
+
+
         </form>
         </div>
         </div>
