--- a/views/vote-confirm.ejs
+++ b/views/vote-confirm.ejs
@@ -31,17 +31,16 @@
             <!--div class="formulario"-->
             <form class="formulario" method="post" action="/confirm-vote" onsubmit="return validateForm()">
         
-    
+                <input type="hidden" name="id_asistencia" value='<%= data.id_asistencia %>' />
 
                 <fieldset>
                     <legend>Emisión de Votación</legend>
                     <h1>ASAMBLEA UNIVERSITARIA</h1>
-                    <H3>FACULTAD DE PRODUCCION Y SERVICIOS</H3>
                     <div class="marcacion-voto" id="lista_asamblea"> 
                         <% var status; %>
                         <%if(status == "ok"){%>
-                            <input type="hidden" name="id_lista_asamblea" value='<%= lista_asamblea.id_lista_electoral %>' />
-                            <input type="text" name="lista_asamblea" value='<%= lista_asamblea.nombre %>' disabled />
+                            <input type="hidden" name="id_lista_asamblea" value='<%= data.lista_asamblea.id_lista_electoral %>' />
+                            <input type="text" name="lista_asamblea" value='<%= data.lista_asamblea.nombre %>' disabled />
                         <%}%>
                         
                         
@@ -57,8 +56,8 @@
                     <div class="marcacion-voto" id="lista_consejo"> 
                         <% var status; %>
                         <%if(status == "ok"){%>
-                            <input type="hidden" name="id_lista_consejo" value='<%= lista_consejo.id_lista_electoral %>'  />
-                            <input type="text" name="lista_consejo" value='<%= lista_consejo.nombre %>' disabled />
+                            <input type="hidden" name="id_lista_consejo" value='<%= data.lista_consejo.id_lista_electoral %>'  />
+                            <input type="text" name="lista_consejo" value='<%= data.lista_consejo.nombre %>' disabled />
                         <%}%>
                     </div>
 
