--- a/views/vote.ejs
+++ b/views/vote.ejs
@@ -19,6 +19,7 @@
                 <h1><span class="text-big">Elecciones 2020</span></h1>
                 <span>Sistema Digital de Votación <b>E-vote</b></span>
             </div>
+            <button class="cerrar_sesion" onclick=cerrar_sesion() style="background: #c22014;" >CERRAR SESIÓN</button>
         </div>
     </header>
     <main>
@@ -27,6 +28,10 @@
 
             <!--div class="formulario"-->
             <form class="formulario" method="post" action="/vote" onsubmit="return validateForm()">
+                <div align="center" style="display: inline;">
+                    <h2><strong>Usuario :</strong> <%= name %> </h2> 
+                </div>
+                <input type="hidden" name="id_asistencia" value=<%= id_asistencia %> >
                 <fieldset>
                     <legend>Emisión de Votación</legend>
                     <h1>ASAMBLEA UNIVERSITARIA</h1>
@@ -55,7 +60,7 @@
 
     $(document).ready(function() {
         init_list('lista_asamblea',1,null);
-        init_list('lista_consejo',2,1);
+        init_list('lista_consejo',2,23);
     });
 
     function init_list(id_list,id_tipo_proceso,id_facultad){
@@ -70,6 +75,7 @@
               async: false
         }).responseText);
         
+        console.log(data);
         data.forEach(function (list) {
             var opt = 
             "<input type='radio' value="+list.id_lista_electoral +" name='"+id_list+"' id='"+id_list+"-"+list.nombre+"'>"+
@@ -107,8 +113,34 @@
          
 
         return false;
-      }
-      
+      } 
+    }
+
+    function cerrar_sesion(){
+        //alert("seguro que desea cerrar sesion");
+
+        Swal.fire({
+        title: 'Cerrar Sesión',
+        text: "¿Esta usted seguro que desea cerrar sesion?",
+        icon: 'warning',
+        showCancelButton: true,
+        reverseButtons: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'SI, CONFIRMAR'
+      }).then((result) => {
+        window.location.href = '/logout';
+        /*
+        if (result.value) {
+          Swal.fire(
+            '¡Emitido!',
+            'Usted a emitido correctamente su voto.',
+            'success'
+          )
+        }*/
+
+      });
+
     }
 
 </script>
